<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/sub_fragment_onboarding_toolbar"/>

    <ScrollView
        android:id="@+id/fragment_onboarding_register_scroll_view"
        style="@style/FadingScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="none"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fragment_onboarding_register_credentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/x1"
            android:paddingLeft="@dimen/x3"
            android:paddingRight="@dimen/x3"
            android:paddingTop="@dimen/x1">

            <is.hello.sense.ui.widget.ProfileImageView
                android:id="@+id/fragment_onboarding_register_profile_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <RelativeLayout
                android:id="@+id/fragment_onboarding_register_import_facebook_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/x3"
                android:paddingBottom="@dimen/x3">

                <Button
                    android:id="@+id/fragment_onboarding_register_import_facebook_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    style="@style/Facebook"/>

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/fragment_onboarding_register_import_facebook_info_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/x1"
                    android:paddingTop="@dimen/x1"
                    android:paddingBottom="@dimen/x1"
                    android:src="@drawable/icon_info_24"
                    android:tint="@color/dim"
                    android:layout_toEndOf="@+id/fragment_onboarding_register_import_facebook_button"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>


            <is.hello.sense.ui.widget.LabelEditText
                android:id="@+id/fragment_onboarding_register_first_name_let"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/x3"
                android:imeOptions="actionNext|flagNoExtractUi"
                android:inputType="textPersonName|textCapWords"
                android:nextFocusForward="@+id/fragment_onboarding_register_last_name_let"
                app:labelText="@string/label_first_name"
                >

                <requestFocus/>
            </is.hello.sense.ui.widget.LabelEditText>

            <is.hello.sense.ui.widget.LabelEditText
                android:id="@+id/fragment_onboarding_register_last_name_let"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/x3"
                android:imeOptions="actionNext|flagNoExtractUi"
                android:inputType="textPersonName|textCapWords"
                android:nextFocusForward="@+id/fragment_onboarding_register_email_let"
                app:labelText="@string/label_last_name"/>

            <is.hello.sense.ui.widget.LabelEditText
                android:id="@+id/fragment_onboarding_register_email_let"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/x3"
                android:imeOptions="actionNext|flagNoExtractUi"
                android:inputType="textEmailAddress"
                android:nextFocusForward="@+id/fragment_onboarding_register_password_let"
                app:labelText="@string/label_email"/>

            <is.hello.sense.ui.widget.LabelEditText
                android:id="@+id/fragment_onboarding_register_password_let"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/x3"
                android:imeOptions="actionGo|flagNoExtractUi"
                android:inputType="textPassword"
                android:nextFocusForward="@+id/fragment_onboarding_register_first_name_let"
                app:isPassword="true"
                app:labelText="@string/label_password"/>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/fragment_onboarding_register_next"
        style="@style/Button.Raised.Onboarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x3"
        android:layout_marginLeft="@dimen/x3"
        android:layout_marginRight="@dimen/x3"
        android:layout_marginTop="@dimen/x1"/>

</LinearLayout>