...
    <string name="title_demographics">Demographics</string>

    <string name="action_ok">OK</string>
    <string name="action_okay">Okay</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_deny">Deny</string>
    <string name="action_continue">Continue</string>
    <string name="action_turn_on_ble">Turn on Bluetooth</string>
    <string name="title_upgrade_sense_voice">Sense with Voice</string>
    <string name="info_upgrade_sense_voice">This will walk you through migrating your account to a new Sense with Voice. You’ll need a Sense with Voice to continue.</string>
    <string name="action_upgrade_sense_voice_help">Buy Sense with Voice</string>
    <string name="title_upgrade_ready_sense_voice">Sense with Voice is ready</string>
    <string name="info_upgrade_ready_sense_voice">Your new Sense with Voice is set up and any paired, original Sleep Pills have been moved over. Next, you’ll pair your new Sleep Pill.</string>
...
    <string name="title_sign_into_wifi_other">Enter WiFi credentials</string>
    <string name="wifi_other_network">Other…</string>
    <string name="label_network_name">Network Name</string>
    <string name="action_skip">Skip</string>
    <string name="action_try_again_later">Try again later</string>
    <string name="action_play_video">Play</string>
    <string name="action_get_started">Get Started</string>
    <string name="action_buy_sense">Order a Sense</string>
    <string name="action_pair_your_sense">Pair your Sense</string>
    <string name="welcome">Welcome</string>
    <string name="title_register_birthday">What is your birthday?</string>
    <string name="action_next">Next</string>
    <string name="title_register_gender">Confirm your gender</string>
    <string name="title_register_weight">How much do you weigh?</string>
    <string name="title_register_height">How tall are you?</string>
    <string name="title_intro_sleep_pill">Clip Sleep Pill to your Pillow</string>
    <string name="info_intro_sleep_pill">Clip Sleep Pill to your pillowcase by pulling the edge of the pillowcase taut.  For best results, place your Sleep Pill on the side of your pillowcase closest to the edge of the bed.</string>
    <string name="title_pair_pill">Pairing your Sleep Pill</string>
...
