<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

    <TextView
        android:id="@+id/view_label_edit_text_label"
        style="@style/Caption2.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/view_label_edit_text_input"
        android:text="@string/title_register"/>

    <FrameLayout
        android:id="@+id/view_label_edit_text_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_label_edit_text_label">

        <EditText
            android:id="@+id/view_label_edit_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <is.hello.sense.ui.widget.PasswordEditText
            android:id="@+id/view_label_edit_text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </FrameLayout>
</RelativeLayout>