...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/fragment_onboarding_introduction_button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/primary"
        android:orientation="horizontal">

...
            android:layout_height="23dp"
            android:layout_gravity="center_vertical"
            android:background="#66ffffff"
            android:importantForAccessibility="no"/>

        <Button
            android:id="@+id/fragment_onboarding_introduction_get_started"
            style="@style/Button.Flat.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="none"
            android:maxLines="1"
...
